--- a/server/LearnWellUniversity.WebApi/appsettings.Development.json
+++ b/server/LearnWellUniversity.WebApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=host.docker.internal;Port=5433;Database=LearnWellUniversityDb;Username=postgres;Password=pass123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
