auth apis - user registration  and jwt token baed  login implemented

--- a/server/LearnWellUniversity.Application/LearnWellUniversity.Application.csproj
+++ b/server/LearnWellUniversity.Application/LearnWellUniversity.Application.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LearnWellUniversity.Domain\LearnWellUniversity.Domain.csproj" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.13.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
+    <ProjectReference Include="..\LearnWellUniversity.Domain\LearnWellUniversity.Domain.csproj" />
   </ItemGroup>
 
 </Project>
