--- a/server/LearnWellUniversity.WebApi/appsettings.Development.json
+++ b/server/LearnWellUniversity.WebApi/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "9q3Y0Yf1+DZkOj1fXbB4OQmAzPk+3vJWj0B/nNRkaeA=",
+    "Issuer": "LearnWellUniversity",
+    "Audience": "LearnWellUniversityAudience"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=host.docker.internal;Port=5433;Database=LearnWellUniversityDb;Username=postgres;Password=pass123;"
   },
