--- a/server/LearnWellUniversity.Infrastructure/LearnWellUniversity.Infrastructure.csproj
+++ b/server/LearnWellUniversity.Infrastructure/LearnWellUniversity.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="9.6.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
