--- a/server/LearnWellUniversity.Infrastructure/LearnWellUniversity.Infrastructure.csproj
+++ b/server/LearnWellUniversity.Infrastructure/LearnWellUniversity.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.BulkExtensions" Version="9.0.1" />
     <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
