--- a/server/LearnWellUniversity.Application/LearnWellUniversity.Application.csproj
+++ b/server/LearnWellUniversity.Application/LearnWellUniversity.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.Core" Version="1.2.1" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.13.1" />
   </ItemGroup>
 
