docker compose support added

--- a/server/LearnWellUniversity.WebApi/appsettings.Development.json
+++ b/server/LearnWellUniversity.WebApi/appsettings.Development.json
@@ -5,7 +5,7 @@
     "Audience": "LearnWellUniversityAudience"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=host.docker.internal;Port=5433;Database=LearnWellUniversityDb;Username=postgres;Password=pass123;"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=LearnWellUniversityDb;Username=postgres;Password=pass123;"
   },
   "Logging": {
     "LogLevel": {
