seq config updated

--- a/server/LearnWellUniversity.WebApi/appsettings.Development.json
+++ b/server/LearnWellUniversity.WebApi/appsettings.Development.json
@@ -27,7 +27,7 @@
       { "Name": "Console" },
       {
         "Name": "Seq",
-        "Args": { "serverUrl": "http://host.docker.internal:5341" }
+        "Args": { "serverUrl": "http://seq:80" }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
