- integraion test setup for infra structure - integration test setup for application - unit test setup for application - unit test setup for domain

--- a/server/tests/LearnWellUniversity.Domain.UnitTests/LearnWellUniversity.Domain.UnitTests.csproj
+++ b/server/tests/LearnWellUniversity.Domain.UnitTests/LearnWellUniversity.Domain.UnitTests.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\LearnWellUniversity.Domain\LearnWellUniversity.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
