--- a/server/tests/LearnWellUniversity.WebApi.FunctionalTests/LearnWellUniversity.WebApi.FunctionalTests.csproj
+++ b/server/tests/LearnWellUniversity.WebApi.FunctionalTests/LearnWellUniversity.WebApi.FunctionalTests.csproj
@@ -22,11 +22,11 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.8" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
 		<PackageReference Include="Moq" Version="4.20.72" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-		<PackageReference Include="Testcontainers" Version="4.6.0" />
 		<PackageReference Include="Testcontainers.PostgreSql" Version="4.6.0" />
 		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.4">
@@ -38,6 +38,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\LearnWellUniversity.Application\LearnWellUniversity.Application.csproj" />
 		<ProjectReference Include="..\..\LearnWellUniversity.WebApi\LearnWellUniversity.WebApi.csproj" />
+		<ProjectReference Include="..\LearnWellUniversity.Shared.Tests\LearnWellUniversity.Shared.Tests.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
