rabit mq and redis app settings added

--- a/server/LearnWellUniversity.WebApi/appsettings.Development.json
+++ b/server/LearnWellUniversity.WebApi/appsettings.Development.json
@@ -5,7 +5,8 @@
     "Audience": "LearnWellUniversityAudience"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=LearnWellUniversityDb;Username=postgres;Password=pass123;"
+    "Postgres": "Host=postgres;Port=5432;Database=LearnWellUniversityDb;Username=postgres;Password=pass123;",
+    "Redis": "learnwelluniversity.redis:6379,password=pass123"
   },
   "Logging": {
     "LogLevel": {
