access and refresh token save into redis container using the rabbit mq container based publisher and consumer

--- a/server/LearnWellUniversity.WebApi/appsettings.Development.json
+++ b/server/LearnWellUniversity.WebApi/appsettings.Development.json
@@ -8,6 +8,12 @@
     "Postgres": "Host=postgres;Port=5432;Database=LearnWellUniversityDb;Username=postgres;Password=pass123;",
     "Redis": "learnwelluniversity.redis:6379,password=pass123"
   },
+  "RabbitMq": {
+    "HostName": "learnwelluniversity.rabbitmq",
+    "Port": 5672,
+    "UserName": "admin",
+    "Password": "pass123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
